@@ -1,3 +1,6 @@
+* Thu Sep 28 2023 Steven Pritchard <steve@sicura.us> - 0.9.0
+- Add AlmaLinux 8 support
+
 * Mon Sep 25 2023 Steven Pritchard <steve@sicura.us> - 0.8.1
 - Remove `hash()` function to support stdlib 9
 - Update module dependencies
